--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -16,132 +16,23 @@ body{
     text-decoration: underline;
 }
 
-.container-fluid{
-    background-color: #6c63ff;
-    color: #F5F5F5;
-    padding-top: 70px;
-}
-
-.hero h1{
-    padding-top: 60px;
-    font-size: 45px;
-}
-
-.hero p{
-    padding-top: 5px;
-    font-size: 20px;   
-}
-
-.hero-text img{
-    padding-bottom: 10px;
-    margin-bottom: 35px;
-}
-
-.container.hero{
-    animation: fadeInLeft 2s;
-}
-
-/* css padão para aplicação do efeito de transação */
-@keyframes fadeInLeft
-{
-    0%{
-        opacity:0;
-        /* translateX reposiciona um elemento na direção horizontal e/ou vertical */
-        -webkit-transform:translateX(-100px); 
-        -ms-transform:translateX(-100px);
-        transform:translateX(-100px)}
-    100%{
-        opacity:1;
-        -webkit-transform:translateX(0);
-        -ms-transform:translateX(0);
-        transform:translateX(0)
-    }
-}
-
-.texts-features p{
-    background-color: #F7F7F7;
-    padding: 15px;
-}
-
-.texts-features p:hover{
-    background-color: #6c63ff;
-    color: #f1f1f1;
-}
-
-.card-dashboard{
-    padding-top: 70px;
-}
-
-.card-values{
-    max-width: 540px;
-}
-
-.pa-expense{
-    background-color: #FFF;
-    border-radius: 5px;
-    margin-left: 10px;
-    color: red;
-    margin-top: 5px;
-}
-
-.pa-renevue{
-    background-color: #FFF;
-    border-radius: 5px;
-    margin-left: 10px;
-    color: green;
-    margin-top: 5px;
-}
-
-.card-header{
-    background-color: #6c63ff;
-    color: #fff;
-}
-
-.cad-release{
-    padding-top: 100px;
-    /* border: 1px solid red; */
-}
 
 button a{
     text-decoration: none;
     color: #fff;
 }
 
-.card{
-    background-color: #f7f3f3 ;
+.card-header{
+    background-color: #DCDCDC;
 }
 
-
+.suppliers{
+    margin-top:50px;
+}
 .header-table{
     background-color: #6c63ff;
 }
 
 table th{
     color:#FFF;
-}
-
-.inputSearch{
-    margin-right:1rem;
-}
-
-.list-releases{
-    padding-top: 90px;
-}
-
-table, tr .row-expenses{
-    color:indianred;
-}
-
-.report{
-    margin-top:90px;
-    /* background-color: #6c63ff; */
-}
-.msg{
-    margin-top:70px;
-    /* border: 1px solid red; */
-    margin-bottom: -30px;
-}
-
-.nav-item.nameUser{
-    columns: red;
 }
