--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -83,14 +83,14 @@ a.new-supplier:hover{
     color: #94AF9F;
 } */
 
-.button-new-supplier{
+.button-new-register{
     background-color:#94AF9F;
     border: none;
     height: 30px;
     margin-top: 7px;
 }
 
-.button-new-supplier a{
+.button-new-register a{
     color:#fff;
 }
 
@@ -112,4 +112,20 @@ button.inputSearch{
     margin-top:110px;
     /* border: 1px solid red; */
     margin-bottom: 15px;
+}
+
+.warning-product{
+    background-color: #ededed;
+    font-size: 12px;
+    padding-left: 5px;
+    padding-right: 5px;
+    border-radius: 5px;
+    height: 30px;
+    text-align: center;
+  
+}
+
+.warning-product,a{
+    padding-top: 5px;
+    text-decoration: none;
 }
