--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -47,12 +47,12 @@ table td a:hover{
 
 
 .red-row {
-    color: yellow;
-}
-
-.yellow-row {
     color: red;
 }
+
+/* .yellow-row {
+    color: red;
+} */
                         
 
 .qtdProduct{
