--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -66,7 +66,7 @@ table td a:hover{
 
 .alert-custom{
     margin-top: 70px;
-    margin-bottom: -80px;
+    margin-bottom: -70px;
 }
 
 .required::after {
@@ -110,9 +110,14 @@ button.inputSearch{
 
 
 .search-and-button{
-    margin-top:110px;
+    margin-top:100px;
     /* border: 1px solid red; */
-    margin-bottom: 15px;
+    color: #AEC2B6;
+    
+}
+
+.caption-table{
+    font-size: 18px;
 }
 
 .warning-product{
@@ -184,3 +189,6 @@ button.inputSearch{
     width: 100vw;
 }
 
+.supplier-datas{
+    margin-top: 100px;
+}
